--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.label :name%><br>
+    <%= f.text_field :name, placeholder: "необрезается_рамкой_placeholder-а_влезает_в_поле" %>
   </div>
   <div class="field">
     <%= f.label :email %><br>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, placeholder: "незабыть_найтиCSSForm-ы" %>
   </div>
   <div class="actions">
     <%= f.submit %>
