--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New User</h1>
+<h1><i>~New User~</i></h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', users_path %>
+<%= link_to 'New User', new_user_path %>
