--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,11 +13,11 @@
 
   <div class="field">
     <%= f.label :name%><br>
-    <%= f.text_field :name, placeholder: "необрезается_рамкой_placeholder-а_влезает_в_поле" %>
+    <%= f.text_field :name, placeholder: "First Name" %>
   </div>
   <div class="field">
     <%= f.label :email %><br>
-    <%= f.text_field :email, placeholder: "незабыть_найтиCSSForm-ы" %>
+    <%= f.text_field :email, placeholder: "E-mail" %>
   </div>
   <div class="actions">
     <%= f.submit %>
