--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -13,3 +13,4 @@
 <%= link_to 'Edit', edit_micropost_path(@micropost) %> |
 <%= link_to 'Back', microposts_path %>
 <%= link_to 'New User', new_user_path %>
+<%= link_to 'Back to users Listing', users_path %>
