--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,13 @@
-<!--  <% provide(:title, "Help") %> -->
+<h1>Help</h1>
+<p>
+  Get help on the Ruby on Rails Tutorial at the
+  <a href="http://www.railstutorial.org/#help">Rails Tutorial help section</a>.
+  To get help on this sample app, see the
+  <a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
+  book</a>.
+</p>
+<%= link_to 'home', static_pages_home_path %>
+<!--  <% provide(:title, "Help") %> 
 <!DOCTYPE html>
 <html>
   <head>
@@ -14,4 +23,4 @@
   book</a>.
 </p>
 </body>
-</html>	
+</html>	-->
