--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,8 @@
   <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
   sample application.
 </p>
-<%= link_to 'about', static_pages_about_path %>
+<%= link_to 'User', users_path %> |
+<%= link_to 'about', static_pages_about_path %> |
 <%= link_to 'help', static_pages_help_path %>
 <!--  <!DOCTYPE html>
 <html>
