--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,6 +25,6 @@
 </table>
 
 <br>
-
-<%= link_to 'New User', new_user_path %> 
+<%= link_to 'home', static_pages_home_path %> |
+<%= link_to 'New User', new_user_path %> |
 <%= link_to 'microposts', microposts_path %>
