--- a/app/views/microposts/edit.html.erb
+++ b/app/views/microposts/edit.html.erb
@@ -3,5 +3,5 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @micropost %> |
-<%= link_to 'Back', microposts_path %>
+<%= link_to 'Back', microposts_path %> |
 <%= link_to 'Back to users Listing', users_path %>
