--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -26,6 +26,6 @@
 
 <br>
 
-<%= link_to 'New Micropost', new_micropost_path %>
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New Micropost', new_micropost_path %> |
+<%= link_to 'New User', new_user_path %> |
 <%= link_to 'Back to users Listing', users_path %>
