--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,6 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', users_path %>
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'Back', users_path %> |
+<%= link_to 'New User', new_user_path %> |
 <%= link_to 'microposts', microposts_path %>
