--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,6 +11,6 @@
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
-<%= link_to 'New User', new_user_path %>
-<%= link_to 'microposts', microposts_path %>
+<%= link_to 'Back', users_path %> |
+<%= link_to 'New User', new_user_path %> |
+<%= link_to 'microposts', microposts_path %> 
