--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,8 @@
 </p>
 <%= link_to 'User', users_path %> |
 <%= link_to 'about', static_pages_about_path %> |
-<%= link_to 'help', static_pages_help_path %>
+<%= link_to 'help', static_pages_help_path %> |
+<%= link_to 'contact', static_pages_contact_path %>
 <!--  <!DOCTYPE html>
 <html>
   <head>
