--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<!--  <% provide(:title, "Home") %>-->
+<% provide(:title, "Home") %>-->
 <h1>Sample App</h1>
 <p>
   This is the home page for the
@@ -9,17 +9,3 @@
 <%= link_to 'about', static_pages_about_path %> |
 <%= link_to 'help', static_pages_help_path %> |
 <%= link_to 'contact', static_pages_contact_path %>
-<!--  <!DOCTYPE html>
-<html>
-  <head>
-    <title>Home | Ruby on Rails Tutorial Sample App</title>
-  </head>
-  <body>
-  	<h1>Sample App</h1>
-<p>
-  This is the home page for the
-  <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
-</p>
-</body>
-</html>	-->
