--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,4 +1,4 @@
-<!-- <% provide(:title, "_2_Contact") %> -->
+<% provide(:title, "Contact") %>
 <h1>Contact</h1>
 <p>
   Contact the Ruby on Rails Tutorial about the sample app at the
