--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,5 @@
 <% provide(:title, "Home") %>
-
-<h1>Sample App <%= string_message(:title) %></h1>
+<h1>Sample App <%= string_message(:title.to_s) %></h1>
 <p>
   This is the home page for the
   <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
