--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,13 @@
 <html>
 <head>
   <title><%= full_title(yield(:title)) %></title>
-  <%= stylesheet_link_tag    'application', media: 'all',
-                                              'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag('application', {media: 'all', 'data-turbolinks-track' => true}) %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-
+  <!-- Rails определяет специальную функцию для включения таблиц стилей
+  В Ruby в обявлении скобки не обязательны
+  media определенно выглядит как хэш, но где фигурные скобки? { 
+  Когда хэш — последний аргумент в вызове функции, фигурные скобки не являются обязательными, поэтому эти два выражения эквивалентны: -->
 </head>
 <body>
 
