--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
   <!-- Rails определяет специальную функцию для включения таблиц стилей
   В Ruby в обявлении скобки не обязательны
   media определенно выглядит как хэш, но где фигурные скобки? { 
-  Когда хэш — последний аргумент в вызове функции, фигурные скобки не являются обязательными, поэтому эти два выражения эквивалентны: -->
+  Когда хэш — последний аргумент в вызове функции, фигурные скобки не являются обязательными, поэтому эти два выражения эквивалентны: 
+  ?body=1  re-reload CSS -->
 </head>
 <body>
 
