--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,9 @@
 <% provide(:title, "Home") %>
-<h1>Sample App </h1>
+<h1>Sample App где результат- <% String(:title).inspect%>
+<% s = Word.new("level")
+s.palindrome?
+s.length
+%></h1>
 <p>
   This is the home page for the
   <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
