--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,17 @@
 <% provide(:title, "Home") %>
-<h1>Sample App где результат- <% String(:title).inspect%>
+<h1>Sample App где результат-</h1> 
+<p>123 <%= !!nil # OMFG forgrt "=" in the <%= pfffffffffffffff
+s = Word.new("level").inspect
+String("Home").inspect
+
+
+%>
 <% s = Word.new("level")
 s.palindrome?
-s.length
-%></h1>
+
+%></p>
 <p>
+
   This is the home page for the
   <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
   sample application.
