--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,14 @@
 <% provide(:title, "Home") %>
 <h1>Sample App где результат-</h1> 
-<p>123 <%= !!nil # OMFG forgrt "=" in the <%= pfffffffffffffff
-s = Word.new("level").inspect
-String("Home").inspect
+<p>123 <%= !!nil # OMFG forgot "=" in the <%= pfffffffffffffff
+s = Myclass.new
+s.string_message(":title")
+provide(:title, "Home")
+String(:title).inspect
 
 
 %>
-<% s = Word.new("level")
+<%= s = Word.new("level")
 s.palindrome?
 
 %></p>
