Chui we're home?

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,8 @@
 <% provide(:title, "Home") %>
 <h1>Sample App где результат-</h1> 
-<p>123 <%= !!nil # OMFG forgot "=" in the <%= pfffffffffffffff
-s = Myclass.new
-s.string_message(":title")
-
-String(:title).inspect
-
-
+<p>123 <%= # OMFG forgot "=" in the <%= pfffffffffffffff
+sa = Myclass.new
+sa.string(:title)
 %>
 <%= s = Word.new("level")
 s.palindrome?
