--- a/app/views/microposts/edit.html.erb
+++ b/app/views/microposts/edit.html.erb
@@ -2,6 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @micropost %> |
-<%= link_to 'Back', microposts_path %> |
-<%= link_to 'Back to users Listing', users_path %>
+<%= link_to 'Show', @micropost, class: "btn btn-lg btn-primary" %> |
+<%= link_to 'Back', microposts_path, class: "btn btn-lg btn-primary" %> |
+<%= link_to 'Back to users Listing', users_path, class: "btn btn-lg btn-primary" %>
