--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -9,4 +9,4 @@
   <a href="http://rubyonrails.org/">Ruby on Rails</a>.
   This is the sample application for the tutorial.
 </p>
-<%= link_to 'home', static_pages_home_path %>
+<%= link_to 'home', static_pages_home_path, class: "btn btn-lg btn-primary" %>
