--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -4,4 +4,4 @@
   Contact the Ruby on Rails Tutorial about the sample app at the
   <a href="http://www.railstutorial.org/#contact">contact page</a>.
 </p>
-<%= link_to 'home', static_pages_home_path %>
+<%= link_to 'home', static_pages_home_path, class: "btn btn-lg btn-primary" %>
