--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,9 @@
         <%= link_to "sample app", '#', id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Home",   '#' %></li>
-            <li><%= link_to "Help",   '#' %></li>
-            <li><%= link_to "Log in", '#' %></li>
+            <li><%= link_to "Home",   static_pages_home_path %></li>
+            <li><%= link_to "Help",   static_pages_home_path %></li>
+            <li><%= link_to "Log in", new_user_path %></li>
           </ul>
         </nav>
       </div>
