--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -16,9 +16,9 @@
       <tr>
         <td><%= micropost.content %></td>
         <td><%= micropost.user_id %></td>
-        <td><%= link_to 'Show', micropost %></td>
-        <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
-        <td><%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', micropost, class: "btn btn-lg btn-primary" %></td>
+        <td><%= link_to 'Edit', edit_micropost_path(micropost), class: "btn btn-lg btn-primary" %></td> 
+        <td><%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-lg btn-primary" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,6 +26,6 @@
 
 <br>
 
-<%= link_to 'New Micropost', new_micropost_path %> |
-<%= link_to 'New User', new_user_path %> |
-<%= link_to 'Back to users Listing', users_path %>
+<%= link_to 'New Micropost', new_micropost_path, class: "btn btn-lg btn-primary" %> |
+<%= link_to 'New User', new_user_path, class: "btn btn-lg btn-primary" %> |
+<%= link_to 'Back to users Listing', users_path, class: "btn btn-lg btn-primary" %>
