--- a/app/views/microposts/new.html.erb
+++ b/app/views/microposts/new.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', microposts_path %> |
-<%= link_to 'Back to users Listing', users_path %>
+<%= link_to 'Back', microposts_path, class: "btn btn-lg btn-primary" %> |
+<%= link_to 'Back to users Listing', users_path, class: "btn btn-lg btn-primary" %>
