--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -7,4 +7,4 @@
   <a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
   book</a>.
 </p>
-<%= link_to 'home', static_pages_home_path %>
+<%= link_to 'home', static_pages_home_path, class: "btn btn-lg btn-primary" %>
