--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,6 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %> |
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'Show', @user, class: "btn btn-lg btn-primary" %> |
+<%= link_to 'Back', users_path, class: "btn btn-lg btn-primary" %> |
+<%= link_to 'New User', new_user_path, class: "btn btn-lg btn-primary" %>
