--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,15 +16,15 @@
       <tr>
         <td><%= user.name %></td>
         <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', user, class: "btn btn-lg btn-primary" %></td>
+        <td><%= link_to 'Edit', edit_user_path(user), class: "btn btn-lg btn-primary" %></td>
+        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-lg btn-primary" %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-<%= link_to 'home', static_pages_home_path %> |
-<%= link_to 'New User', new_user_path %> |
-<%= link_to 'microposts', microposts_path %>
+<%= link_to 'home', static_pages_home_path, class: "btn btn-lg btn-primary" %> |
+<%= link_to 'New User', new_user_path, class: "btn btn-lg btn-primary" %> |
+<%= link_to 'microposts', microposts_path, class: "btn btn-lg btn-primary" %>
