--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home",   static_pages_home_path %></li>
             <li><%= link_to "Help",   static_pages_help_path %></li>
-            <li><%= link_to "Log in", users_path, %></li>
+            <li><%= link_to "Log in",  new_user_path%></li>
           </ul>
         </nav>
       </div>
