--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -15,7 +15,7 @@ s.palindrome?
     sample application.
   </h2>
 
-  <%= link_to "Sign up now!", users_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "Sign up now!", new_user_path, class: "btn btn-lg btn-primary" %>
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails logo"),
