--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,30 @@
 <% provide(:title, "Home") %>
 <div class="center jumbotron">
-  <h1>Welcome to the Sample App</h1>
+  <h1>Welcome to the Sample App -
 <%= # OMFG forgot "=" in the <%= pfffffffffffffff
 sa = Myclass.new
+provide(:title, "Home")
+:title.length
+:title.empty?
+:title.to_s # to string
+#:title => "Home" # ERROR
+user = {:title => "Home"}
+puts user
+puts user.to_a.inspect # Вывести массив.# Вывести массив буквально.
+
+# НИХУА :title => "Home" где
+:title.inspect
+user.inspect
+user[:title]
+user.tap {}
+
 sa.string(:title)
+
 %>
-<%= s = Word.new("level")
+<%= s = Word.new("level1")
 s.palindrome?
 %>
+</h1>
   <h2>
     <img alt="Rails logo" src="/assets/rails-9308b8f92fea4c19a3a0d8385b494526.png" />
     This is the home page for the
