--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,11 +2,11 @@
 <div class="center jumbotron">
   <h1>Welcome to the Sample App -
 <%= # OMFG forgot "=" in the <%= pfffffffffffffff
-sa = Myclass.new
+#sa = Myclass.new
 
-:title.length
-:title.empty?
-:title.to_s # to string
+#:title.length
+#:title.empty?
+#:title.to_s # to string
 #:title => "Home" # ERROR  user = {:title => "Home"}  puts user  puts user.to_a.inspect # Вывести массив.# Вывести массив буквально.  
 # НИХУА :title => "Home" где  :title.inspect  user.inspect  user[:title]  user.tap {}  :title == "Home"
 #sa.string(:title)  
@@ -14,8 +14,8 @@ user1 = {:title => "Home"}
 user2 = {name: "Home"}
 user1 == user2
 %>
-<%= s = Word.new("level1")
-s.palindrome?
+<%= #s = Word.new("level1")
+#s.palindrome?
 %>
 </h1>
   <h2>
