--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -17,7 +17,7 @@
 
   <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
 </div>
-<%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org/' %> |
+<%= link_to image_tag("rails-logo.svg", alt: "Rails logo"), 'http://rubyonrails.org/' %> |
 <%= link_to 'User', users_path, class: "btn btn-lg btn-primary" %> |
 <%= link_to 'about', static_pages_about_path, class: "btn btn-lg btn-primary" %> |
 <%= link_to 'help', static_pages_help_path, class: "btn btn-lg btn-primary" %> |
