--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
                                            'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
+    <%= render 'layouts/shim' %>
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
       </script>
@@ -18,14 +19,21 @@
         <nav>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home",   static_pages_home_path %></li>
-            <li><%= link_to "Help",   static_pages_help_path %></li>
-            <li><%= link_to "Log in",  new_user_path%></li>
+            <li><%= link_to "Help",   static_pages_home_path %></li>
+            <li><%= link_to "Log in", new_user_path %></li>
           </ul>
         </nav>
       </div>
     </header>
+    <!--push -->
+    <%= render 'layouts/shim' %>
     <div class="container">
       <%= yield %>
     </div>
   </body>
 </html>
+  <!-- Rails определяет специальную функцию для включения таблиц стилей
+  В Ruby в обявлении скобки не обязательны
+  media определенно выглядит как хэш, но где фигурные скобки? { 
+  Когда хэш — последний аргумент в вызове функции, фигурные скобки не являются обязательными, поэтому эти два выражения эквивалентны: 
+  ?body=1  re-reload CSS -->
