--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,29 +6,17 @@
                                            'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-    <%= render 'layouts/shim' %>
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
       </script>
     <![endif]-->
-  </head>
+    <%= #render 'layouts/shim' #shim-партиал%>
+  </head>  
   <body>
-    <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container">
-        <%= link_to "sample app", '#', id: "logo" %>
-        <nav>
-          <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Home",   static_pages_home_path %></li>
-            <li><%= link_to "Help",   static_pages_home_path %></li>
-            <li><%= link_to "Log in", new_user_path %></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <!--push -->
-    <%= render 'layouts/shim' %>
+    <%= #render 'layouts/header' #-партиал%>
     <div class="container">
       <%= yield %>
+      <%= render 'layouts/footer' %>
     </div>
   </body>
 </html>
