--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,8 +3,9 @@
     The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
     by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
   </small>
+
   <nav>
-    <ul>
+    <ul class="footer" >
       <li><%= link_to "About",   '#' %></li>
       <li><%= link_to "Contact", '#' %></li>
       <li><a href="http://news.railstutorial.org/">News</a></li>
