--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -78,12 +78,14 @@
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
-}
-
-#logo:hover {
+  /* ------------ & родительский элемент #logo; в SCSS  */
+  &:hover {
   color: #fff;
   text-decoration: none;
+  }
 }
+
+
 /* universal */
 
 body {
@@ -97,13 +99,12 @@ section {
 textarea {
   resize: vertical;
 }
-
+/*Вложенное правило h1 автоматически наследует содержимое .center.*/
 .center {
   text-align: center;
-}
-
-.center h1 {
-  margin-bottom: 10px;
+  h1 {
+    margin-bottom: 10px;
+  }
 }
 /* typography */
 
