--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,13 +18,15 @@
 }
 /* The dropdown container */
 .dropdown {
-  float: left;
-  overflow: hidden;
+  float: right;
+  /*overflow: hidden;
+  position: relative;
+  display: inline-block;*/
 }
 
 /* Dropdown button */
 .dropdown .dropbtn {
-  font-size: 16px;
+    font-size: 16px;
   border: none;
   outline: none;
   color: white;
@@ -34,7 +36,7 @@
   margin: 0; /* Important for vertical align on mobile phones */
 }
 
-/* Add a red background color to navbar links on hover */
+/* Add a red background color to navbar links on HOVER НАВЕДЕНИИ */
 .navbar a:hover, .dropdown:hover .dropbtn {
   background-color: red;
 }
@@ -118,14 +120,15 @@ h1 {
   margin-bottom: 30px;
   text-align: center;
 }
-
+/* -- определив переменную: */
+$light-green: #009933;
 h2 {
   font-size: 1.2em;
   letter-spacing: -1px;
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: #777;
+  color: $light-green;
 }
 
 p {
@@ -133,12 +136,12 @@ p {
   line-height: 1.7em;
 }
 /* footer */
-
+/*
 footer {
   margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
-  color: #777;
+  color: $light-green;
 }
 
 footer a {
@@ -161,4 +164,28 @@ footer ul {
 footer ul li {
   float: left;
   margin-left: 15px;
+}
+*/
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+  a {
+    color: #555;
+    &:hover {
+      color: #222;
+    }
+  }
+  small {
+    float: left;
+  }
+  ul {
+    float: right;
+    list-style: none;
+    li {
+      float: left;
+      margin-left: 15px;
+    }
+  }
 }
