--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -31,6 +31,6 @@ user1 == user2
 <%= link_to image_tag("rails.png", alt: "Rails logo"),
             'http://rubyonrails.org/', class: "btn btn-lg btn-primary" %>
 <%= link_to 'User', users_path, class: "btn btn-lg btn-primary" %> |
-<%= link_to 'about', static_pages_about_path, class: "btn btn-lg btn-primary" %> |
-<%= link_to 'help', static_pages_help_path, class: "btn btn-lg btn-primary" %> |
-<%= link_to 'contact', static_pages_contact_path, class: "btn btn-lg btn-primary" %>
+<%= link_to 'about', about_path, class: "btn btn-lg btn-primary" %> |
+<%= link_to 'help', help_path, class: "btn btn-lg btn-primary" %> |
+<%= link_to 'contact', contact_path, class: "btn btn-lg btn-primary" %>
