--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -78,7 +78,7 @@
   color: #fff;
   text-transform: uppercase;
   letter-spacing: -1px;
-  padding-top: 9px;
+  padding-top: 39px;        /*19*/
   font-weight: bold;
   /* ------------ & родительский элемент #logo; в SCSS  */
   &:hover {
