--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,12 @@
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
-        <%= link_to "sample app", '#', id: "logo" %>
-        
+        <%= link_to "sample app", root_path, id: "logo" %>
+
         <nav>
-            
+
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Home",   static_pages_home_path %></li>
-            <li><%= link_to "Help",   static_pages_home_path %></li>
+            <li><%= link_to "Home",    root_path %></li>
+            <li><%= link_to "Help",    help_path %></li>
             <li><%= link_to "Log in", new_user_path %></li>
           </ul>
           <div class="dropdown">
@@ -20,11 +20,7 @@
     </div>
   </div>
 
-          <div class="navbar">
-  <a href="#home">Home</a>
-  <a href="#news">News</a>
-  
-</div>
+
         </nav>
       </div>
     </header>
