--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
-<h1><i>~New User~</i></h1>
-
+<% provide(:title, 'Sign up') %>
+<h1><i>~New User~ Sign up</i></h1>
+<p>This will be a signup page for new users.</p>
 <%= render 'form' %>
 
 <%= link_to 'Back', users_path %> |
