index.himl.erb_@user

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+<%=#7-Представление использует Embedded (Встроенный) Ruby, чтобы визуализировать страницу в виде HTML.%>
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Users</h1>
@@ -10,7 +11,7 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
+<%=#7-Представление использует Embedded (Встроенный) Ruby, чтобы визуализировать страницу в виде HTML.Контроллер возвращает HTML в браузе%>
   <tbody>
     <% @users.each do |user| %>
       <tr>
