New_Sign_Up_only_layout

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,13 +13,13 @@
 
   <div class="field">
     <%= f.label :name%><br>
-    <%= f.text_field :name, placeholder: "First Name" %>
+    <%= f.text_field :name, placeholder: "First Name1" %>
   </div>
   <div class="field">
     <%= f.label :email %><br>
-    <%= f.text_field :email, placeholder: "E-mail" %>
+    <%= f.text_field :email, placeholder: "E-mail1" %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create my account", class: "btn btn-primary"%>
   </div>
 <% end %>
