--- a/app/views/microposts/_form.html.erb
+++ b/app/views/microposts/_form.html.erb
@@ -20,6 +20,6 @@
     <%= f.number_field :user_id %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create my micropost", class: "btn btn-primary"%>
   </div>
 <% end %>
