--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,27 @@
 <% provide(:title, 'Sign up') %>
 <h1><i>~New User~ Sign up</i></h1>
-<p>This will be a signup page for new users.</p>
-<%= render 'form' %>
 
+<%= render 'form' %>
+<h2><p>This will be a signup page for new users.</p></h2>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@user) do |f| %>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+
+      <%= f.label :email %>
+      <%= f.email_field :email %>
+
+      <%= f.label :password %>
+      <%= f.password_field :password %>
+
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation %>
+
+      <%= f.submit "Create my account", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
 <%= link_to 'Back', users_path %> |
 <%= link_to 'New User', new_user_path %> |
 <%= link_to 'microposts', microposts_path %>
