--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,22 +1,22 @@
 <% provide(:title, 'Sign up') %>
 <h1><i>~New User~ Sign up</i></h1>
-
+<h1>This from render _form.html.erb</h1>
 <%= render 'form' %>
-<h2><p>This will be a signup page for new users.</p></h2>
+<h2>This will be a signup page for new users.</h2>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
-      <%= f.label :name %>
-      <%= f.text_field :name %>
+      <%= f.label :name%><br>
+      <%= f.text_field :name, placeholder: "First Name" %>
 
-      <%= f.label :email %>
-      <%= f.email_field :email %>
+      <%= f.label :email %><br>
+      <%= f.text_field :email, placeholder: "E-mail" %>
 
       <%= f.label :password %>
-      <%= f.password_field :password %>
+      <%= f.password_field :password, placeholder: "password" %>
 
       <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation %>
+      <%= f.password_field :password_confirmation, placeholder: "Reply password" %>
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
