--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,8 @@
 <h2>This will be a signup page for new users.</h2>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |f| %>
+    <%= form_for(@user) do |f| %>/*do указывает на то, что form_for принимает блок с одной переменной, которую мы назвали f 
+    f возвращает код этого элемента, специально предназначенный для установки атрибута объекта @user*/
       <%= f.label :name%><br>
       <%= f.text_field :name, placeholder: "First Name" %>
 
