--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,9 @@
 <% provide(:title, 'Sign up') %>
-<h1><i>~New User~ Sign up</i></h1>
+<h1><i>Sign up</i></h1>
 <h1>This from render _form.html.erb</h1>
 <%= render 'form' %>
 <h2>This will be a signup page for new users.</h2>
+
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>/*do указывает на то, что form_for принимает блок с одной переменной, которую мы назвали f 
@@ -25,4 +26,4 @@
 </div>
 <%= link_to 'Back', users_path %> |
 <%= link_to 'New User', new_user_path %> |
-<%= link_to 'microposts', microposts_path %>
+<%= link_to 'microposts', microposts_path %>    
