--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,8 +6,8 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |f| %>/*do указывает на то, что form_for принимает блок с одной переменной, которую мы назвали f 
-    f возвращает код этого элемента, специально предназначенный для установки атрибута объекта @user*/
+    <%= form_for(@user) do |f| %><!--/*do указывает на то, что form_for принимает блок с одной переменной, которую мы назвали f 
+    f возвращает код этого элемента, специально предназначенный для установки атрибута объекта @user*/-->
       <%= f.label :name%><br>
       <%= f.text_field :name, placeholder: "First Name" %>
 
