--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -238,3 +238,17 @@ input, textarea, select, .uneditable-input {
   @include box_sizing;
   /*Сама форма представлена в Листинге 7.13. Детально мы будем обсуждать ее в Разделе 7.2.2, а для начала давайте немного стилизуем ее с помощью SCSS из Листинга 7.14. (Обратите внимание на повторное использование примеси box_sizing из Листинга 7.2.) После применения этих CSS-правил страница регистрации выглядит так же, как на Рисунке 7.12.*/
 }
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
+}
