--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,9 +2,7 @@
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %><!--/*do указывает на то, что form_for принимает блок с одной переменной, которую мы назвали f 
     f возвращает код этого элемента, специально предназначенный для установки атрибута объекта @user*/-->
-    <%= render 'shared/error_messages' %>
-    
-    <!--<% if @user.errors.any? %>
+    <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
@@ -16,23 +14,19 @@
     </div>
     <% end %>
     </ul>
-    </div>-->
+    </div>
     <%# end %>
       <%= f.label :name%><br>
       <%= f.text_field :name, placeholder: "First Name" %>
-      <%= f.text_field :name, class: 'form-control' %>
 
       <%= f.label :email %><br>
       <%= f.text_field :email, placeholder: "E-mail" %>
-      <%= f.text_field :email, class: 'form-control' %>
 
       <%= f.label :password %>
       <%= f.password_field :password, placeholder: "password" %>
-      <%= f.text_field :password, class: 'form-control' %>
 
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, placeholder: "Reply password" %>
-      <%= f.text_field :password_confirmation, class: 'form-control' %>
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
