--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,8 +3,8 @@
   <aside class="col-md-4">
     <section class="user_info">
       <h1>
-        <%= gravatar_for @user  %>
-        <%= @user.name %>, <%= @user.email %>
+        <%= link_to (gravatar_for @user), edit_user_path(@user)%>
+        <%= @user.name %>
       </h1>
     </section>
   </aside>
