--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,6 +2,7 @@
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %><!--/*do указывает на то, что form_for принимает блок с одной переменной, которую мы назвали f 
       f возвращает код этого элемента, специально предназначенный для установки атрибута объекта @user*/-->
+<!--=begin      
       <% if @user.errors.any? %>
         <div id="error_explanation">
         <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -14,6 +15,7 @@
       <% end %>
       </ul>
       </div>
+=end-->      
       <%# end %>
       <%= f.label :name%><br>
       <%= f.text_field :name, placeholder: "First Name" %>
