session new_html.erb

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,14 +7,14 @@
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home",    root_path %></li>
             <li><%= link_to "Help",    help_path %></li>
-            <li><%= link_to "Log in", new_user_path %></li>
+            <li><%= link_to "Log in", login_path %></li>
           </ul>
           <div class="dropdown">
                 <button class="dropbtn">Dropdown
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
+      <a href="http://localhost:3000/login">Link 1</a>
       <a href="#">Link 2</a>
       <a href="#">Link 3</a>
     </div>
