--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -28,5 +28,5 @@
 </div>
 -->
 <%= link_to 'Back', users_path %> |
-<%= link_to 'New User', new_user_path %> |
+<%= link_to 'lognin', login_path %> |
 <%= link_to 'microposts', microposts_path %>    
