--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,7 +14,7 @@ user1 == user2
 %>
 </h1>
   <h2>
-    <img alt="Rails logo" src="/assets/rails.svg" id="img3" />
+    <img alt="Rails logo" src="/assets/Ruby.svg" id="img3" />
     This is the home page for the
     <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
     sample application.
