--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,6 @@
+<!-- 
+В качестве первого шага к появлению ссылок и стилей в учебном приложении, мы добавим в файл макета сайта application.html.erb 
+-->
 <!DOCTYPE html>
 <html>
       <title><%= full_title(yield(:title)) %></title>
