--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 -->
 <!DOCTYPE html>
 <html>
-      <title><%= full_title(yield(:title)) %></title>
+  <title><%= full_title(yield(:title)) %></title>
     <%= stylesheet_link_tag 'application', media: 'all',
                                            'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -15,7 +15,8 @@
     <%= render 'layouts/shim' %>
     <%= render 'layouts/header' %>
   <body>
-    
+    <!--Завершающая часть макета — это div для основного содержимого:
+    -->
     <div class="container">
       <%= yield %>
       <%= render 'layouts/footer' %>
