--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,27 @@
       <%= yield %>
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
+      <!--
+      1.отладочную информацию 
+      Rails поставляется с тремя окружениями: test (тестовое), development (разработки) и production (рабочий сервер). 
+      -->
     </div>
   </body>
 </html>
+<!--
+      1. Профили в этом разделе будут первыми по-настоящему динамическими страницами в нашем приложении. Хотя представление будет существовать в виде отдельной страницы кода, в каждом профиле будет использована его собственная информация, полученная из базы данных приложения.
+      Окружением по умолчанию для Rails-консоли является окружение разработки:
+
+      $ rails console
+      Loading development environment
+    Rails.env
+    "development"
+    Rails.env.development?
+    true
+    Rails.env.test?
+    false  
+    В другом окрыжкнии rails console test
+    -->
   <!-- Rails определяет специальную функцию для включения таблиц стилей
   В Ruby в обявлении скобки не обязательны
   media определенно выглядит как хэш, но где фигурные скобки? { 
