--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,8 @@
+<!-- ruby/hash:actioncontroller::parametters
+  controller:user
+  action:show
+  id:1
+-->
 <% provide(:title, @user.name) %>
 <div class="row">
   <aside class="col-md-4">
