--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,32 +1,13 @@
 <% provide(:title, 'Sign up') %>
-<h1><i>Sign up</i></h1>
-<h1>This from render _form.html.erb</h1>
+<h1>Sign up</h1>
+<h2> - h2 - new.html.erb - </h2>
+
+
 <%= render 'form' %>
 
-<!--
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |f| %>
-    
-    /*do указывает на то, что form_for принимает блок с одной переменной, которую мы назвали f 
-    f возвращает код этого элемента, специально предназначенный для установки атрибута объекта @user*/
-      <%= f.label :name%><br>
-      <%= f.text_field :name, placeholder: "First Name" %>
 
-      <%= f.label :email %><br>
-      <%= f.text_field :email, placeholder: "E-mail" %>
 
-      <%= f.label :password %>
-      <%= f.password_field :password, placeholder: "password" %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation, placeholder: "Reply password" %>
-
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
-    <% end %>
-  </div>
-</div>
--->
 <%= link_to 'Back', users_path %> |
 <%= link_to 'lognin', login_path %> |
 <%= link_to 'microposts', microposts_path %>    
