--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,8 @@
         <!-- 
         -->
         <% if logged_in? %>
-          <li><%= link_to "Link_to:user", current_user%></li>
+          <li><%= link_to "Profile", current_user %></li>
+          <li><%= link_to "Link_to:edit_user_path", edit_user_path(current_user)%></li>
           
 
            <!--нет стоп авторизованн раз видно-->
