--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -11,7 +11,7 @@
     </ul>
   </div>
 <% end %>
-<!--
+<!-- #Частичные шаблоны (партиалы)
 Started POST "/users" for 127.0.0.1 at 2020-03-21 17:10:38 +0200
 Processing by UsersController#create as HTML
   Parameters: {"utf8"=>"✓", "authenticity_token"=>"jM0j3KfereMcDV125Tx5gid2RD93b3kW3t3fBrwRHTpU9iXOQUzotwK/da9OY3ega3OO82yAmATF3fektV4G6g==", "user"=>{"name"=>"sfname1", "email"=>"", "password"=>"[FILTERED]", "password_confirmation"=>"[FILTERED]"}, "commit"=>"Create my account"}
