--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,17 +12,15 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
       </script>
     <![endif]-->
-    <%= render 'layouts/shim' %>
-    <%= render 'layouts/header' %>
+    <%= render 'layouts/shim' #HTML shim одним вызовом Rails-хелпера render%>
+    <%= render 'layouts/header' #HTML header одним вызовом Rails-хелпера render%>
   <body>
-    <!--Завершающая часть макета — это div для основного содержимого:
-    -->
     <div class="container">
             <% flash.each do |message_type, message| %>
             <div class="alert alert-<%= message_type %>"><%= message %></div>
             <% end %>
       <%= yield %>
-      <%= render 'layouts/footer' %>
+      <%= render 'layouts/footer' #HTML footer одним вызовом Rails-хелпера render%>
       <%= debug(params) if Rails.env.development? %>
       <!--
       1.отладочную информацию 
