--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
+<% provide(:title, 'All users') %>
+
 <p id="notice"><%= notice %></p>
-<h1>Listing Users</h1>
+
 
 <table>
   <thead>
@@ -27,3 +29,5 @@
 <%= link_to 'home', static_pages_home_path %> |
 <%= link_to 'New User', new_user_path %> |
 <%= link_to 'microposts', microposts_path %>
+
+
