--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,6 +19,7 @@
         <% if logged_in? %>
           <li><%= link_to "Profile", current_user %></li>
           <li><%= link_to "Settings:edit_user_path(current_user)", edit_user_path(current_user)%></li>
+          <li><%= link_to "Users", users_path %></li>
                        
 
            <!--нет стоп авторизованн раз видно-->
@@ -30,7 +31,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Settings", '#' %></li>
+              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "Log out", logout_path, method: "delete" %>
