--- a/app/views/user_mailer/account_activation.text.erb
+++ b/app/views/user_mailer/account_activation.text.erb
@@ -1,3 +1,12 @@
+UserMailer#account_activation
+
+<%= @greeting %>, find me in app/views/user_mailer/account_activation.text.erb
+<h1>UserMailer#account_activation</h1>
+
+<p>
+  <%= @greeting %>, find me in app/views/user_mailer/account_activation.html.erb
+</p>
+
 Привет, <%= @user.name %>!
 
 Добро пожаловать в Учебное Приложение! Перейдите по ссылке для активации аккаунта:
