--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,12 +17,24 @@
         <!-- 
         -->
         <% if logged_in? %>
+          <li><%= link_to "Users", users_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Account <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "Log out", logout_path, method: "delete" %>
+              </li>
+            </ul>
+          </li>
+          
           <li><%= link_to "Profile", current_user %></li>
           <li><%= link_to "Settings:edit_user_path(current_user)", edit_user_path(current_user)%></li>
-          <li><%= link_to "Users", users_path %></li>
-                       
-
-           <!--нет стоп авторизованн раз видно-->
+           
           <li><%= link_to "logout123", logout_path, method: "delete" %></li>  <!--нерабочий  delete 'logout'  => 'sessions#destroy'  Если вы полностью закроете браузер, то можете убедиться, что приложение забыло ваш статус и требует войти снова, чтобы появилась возможность увидеть вышеописанные изменения.-->
           </li> <!--нет стоп авторизованн раз видно-->
           <li class="dropdown"> <!--нету dropdown -->
